# SchmusigerMusiger

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yml
src/: audio_manager.py  bot.py  command_handler.py  exceptions.py  music_queue.py  settings.py  utils.py  youtube.py
src/commands/: control_commands.py  controls.py  info.py  info_commands.py  play.py  queue_commands.py  search.py  search_commands.py  test.py
